--- a/app/src/main/res/layout/review_list_item.xml
+++ b/app/src/main/res/layout/review_list_item.xml
@@ -48,10 +48,21 @@
         android:layout_height="wrap_content"
         android:text="March 8 at 4:18 PM"
         android:textSize="17sp"
-        app:layout_constraintBottom_toTopOf="@+id/txtComment"
         app:layout_constraintEnd_toEndOf="@+id/txtName"
         app:layout_constraintStart_toStartOf="@+id/txtName"
         app:layout_constraintTop_toBottomOf="@+id/txtName" />
+
+    <RatingBar
+        android:id="@+id/rating_rating_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/rating_bar"
+        android:numStars="5"
+        android:stepSize=".5"
+        app:layout_constraintTop_toBottomOf="@+id/txtCreateTime"
+        app:layout_constraintStart_toStartOf="@+id/txtCreateTime"/>
 
     <TextView
         android:id="@+id/txtComment"
@@ -63,7 +74,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/txtName"
         app:layout_constraintStart_toStartOf="@+id/txtName"
-        app:layout_constraintTop_toBottomOf="@+id/txtCreateTime" />
+        app:layout_constraintTop_toBottomOf="@+id/rating_rating_bar" />
 
     <View
         android:id="@+id/view"
