--- a/app/src/main/res/layout/activity_user_infor_ticket_history.xml
+++ b/app/src/main/res/layout/activity_user_infor_ticket_history.xml
@@ -24,50 +24,27 @@
             android:layout_height="match_parent" />
     </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="250dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="36dp"
-        android:orientation="horizontal"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="81dp">
-
-        <Button
-            android:id="@+id/button6"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/corner_button"
-            android:text="Previous"
-            android:textColor="@color/white" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/button7"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/corner_button"
-            android:text="Next"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
     <ImageButton
         android:id="@+id/back_button"
         android:layout_width="37dp"
         android:layout_height="40dp"
+        android:layout_marginStart="8dp"
         android:adjustViewBounds="false"
         android:background="@color/blank"
         android:scaleType="fitCenter"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardView"
-        app:srcCompat="@drawable/back_icon"
-        tools:layout_editor_absoluteX="8dp" />
+        app:srcCompat="@drawable/back_icon" />
+
+    <ImageView
+        android:id="@+id/loadingGif"
+        android:layout_width="73dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="150dp"
+        app:layout_constraintEnd_toEndOf="@+id/ticket_lv"
+        app:layout_constraintStart_toStartOf="@+id/ticket_lv"
+        app:layout_constraintTop_toBottomOf="@+id/cardView"
+        app:srcCompat="@drawable/loading" />
 
     <View
         android:id="@+id/view4"
@@ -141,8 +118,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
