--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="facebook">#1877F2</color>
-    <color name="logo_color">#663F51B5</color>
+    <color name="logo_color">#0A1B7A</color>
     <color name="start">#6BB514</color>
     <color name="end">#3048CF</color>
     <color name="attribute_gray">#20706060</color>
