--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,4 +46,15 @@
         app:srcCompat="@drawable/vexere"
         app:tint="@color/logo_color" />
 
+    <ImageView
+        android:id="@+id/login_loading"
+        android:layout_width="85dp"
+        android:layout_height="89dp"
+        android:layout_marginTop="120dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo"
+        app:srcCompat="@drawable/loading" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
