--- a/app/src/main/res/layout/activity_ticket_item.xml
+++ b/app/src/main/res/layout/activity_ticket_item.xml
@@ -102,6 +102,7 @@ android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="5dp"
             android:background="@drawable/corner_button"
             android:text="Buy"
