--- a/app/src/main/res/layout/activity_blog_management.xml
+++ b/app/src/main/res/layout/activity_blog_management.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/btnBack"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="5dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_icon" />
+
     <LinearLayout
         android:id="@+id/logOutBtnAdminBlog"
         android:layout_width="wrap_content"
